--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,26 @@
-# OS
-.DS_Store
-Thumbs.db
-
 # Python
 __pycache__/
 *.pyc
 *.pyo
 *.pyd
 *.egg-info/
-pip-wheel-metadata/
 .venv/
-env/
-venv/
+.env
+.env.*
 
-# Caches / tools you saw in warnings
-.cache/
-.knime/
-.equo/
-.pyenv/
-.ollama/
-.docker/
-.ipython/
-.wdm/
-.huggingface/
-.selenium/
-
-# IDE
+# OS/editor
+.DS_Store
+Thumbs.db
 .vscode/
 .idea/
 
-# App data (keep folder, ignore files)
+# Dash build artifacts
+.cache/
+
+# Runtime data & exports (keep the folder, ignore files)
 data/*
 !data/.gitkeep
+
+# Notebooks / logs (if any)
+*.ipynb_checkpoints
+logs/
