--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -1,12 +1,11 @@
 {
-  "name": "U10 Lineup",
-  "short_name": "U10 Lineup",
+  "name": "Snake Lineup",
+  "short_name": "Snake Lineup",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#0b5ed7",
   "icons": [
-    { "src": "/assets/icon-192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "/assets/icon-512.png", "sizes": "512x512", "type": "image/png" }
+    { "src": "/assets/icon-192.png", "sizes": "192x192", "type": "image/png" }
   ]
 }
