--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-dash==2.17.1
-pandas>=2.2.2
-numpy>=1.26
-openpyxl>=3.1
-gunicorn>=21.2
+dash>=2.17
+flask>=3.0
+gunicorn>=23
+pandas
+numpy
+openpyxl
